fix bugs in faceted search, help appear, more/less facets shown, with scrollbar if required. Sort remains to be done.

--- a/cendari/static/cendari/css/facetview.css
+++ b/cendari/static/cendari/css/facetview.css
@@ -54,7 +54,9 @@
 .facetview_del{
     color:grey;
 }
-.facetview_filterselected{
+.facetview_filters {
+    overflow-y: auto;
+    max-height: 300px;
 }
 .facetview_facetlogic{
 }
